buildpack を使用したイメージを追加